<resources>
    <string name="app_name">ToDoList</string>
    <string name="task_title">Task Title</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="enter_task_title">Enter Task title</string>
    <string name="enter_your_task">Enter your Task</string>
    <string name="set_date_and_time">Set date and time</string>
    <string name="set_date">Set Date</string>
    <string name="set_time">Set Time</string>
    <string name="save">Save</string>
    <string name="empty_list_string">Your To Do List is empty, click the add button below to add To Do, click the To Do to Edit it or swipe right to delete it</string>
</resources>