<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cardView"
    android:background="@color/todo_card_background"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtTitle"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="5dp"
            android:ellipsize="end"
            android:text="@string/task_title"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/todo_title_text"/>

        <TextView
            android:id="@+id/txtDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_below="@+id/txtTitle"
            android:layout_alignParentStart="true"
            android:ellipsize="end"
            android:layout_marginTop="4dp"
            android:textSize="16sp"
            android:textColor="@color/todo_description_text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtDateVisible"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txtDescription"
            android:layout_marginTop="15dp"
            android:text="@string/date"
            android:textSize="12sp"
            android:visibility="visible"
            android:textColor="@color/date_time_text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtDate"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txtDateVisible"
            tools:text="29-7-2023"
            android:visibility="visible"
            android:textColor="@color/date_time_text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtTimeVisible"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/txtDescription"
            android:layout_marginTop="15dp"
            android:text="@string/time"
            android:textSize="12sp"
            android:visibility="visible"
            android:textColor="@color/date_time_text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtTime"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/txtTimeVisible"
            tools:text="12:25 PM"
            android:visibility="visible"
            android:textColor="@color/date_time_text"/>

    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>